[package]
name = "yatch-core"
version = "0.1.0"
edition = "2021"
description = "Core types, path parsing, and utilities for Yatch OCI registry"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
